RESOLVED FIXED18712
cursor is not updated after loading is finished
https://bugs.webkit.org/show_bug.cgi?id=18712
Summary cursor is not updated after loading is finished
Ariya Hidayat
Reported 2008-04-24 03:26:45 PDT
Run the Qt Launcher and load the following URI: data:text/html,<p style="margin-top: 100px"><a href="data:text/html,<textarea rows=50 cols=50>">Go here, do not move, and then click</a></p> Upon clicking the link, the cursor is not updated to become an I-Beam cursor (as it hovers a textarea).
Attachments
Forces cursor update when loading is finished (1.20 KB, patch)
2008-04-24 04:04 PDT, Ariya Hidayat
no flags
Ariya Hidayat
Comment 1 2008-04-24 03:50:35 PDT
In Safari, the cursor is updated properly. We found out that likely Safari sends a (fake) mouse-move event to the webview so that the cursor gets the update.
Ariya Hidayat
Comment 2 2008-04-24 04:04:24 PDT
Created attachment 20790 [details] Forces cursor update when loading is finished This workaround is only for the Qt port. But I wonder if we should really fix it inside WebCore.
Adam Roben (:aroben)
Comment 3 2008-04-24 06:18:51 PDT
(In reply to comment #1) > In Safari, the cursor is updated properly. We found out that likely Safari > sends a (fake) mouse-move event to the webview so that the cursor gets the > update. I don't know what exactly causes this to work in Safari, but I don't think we're sending a mouse event when the load finishes.
Simon Hausmann
Comment 4 2008-04-29 06:19:07 PDT
Fix landed in r32682
Note You need to log in before you can comment on or make changes to this bug.