Ariya Hidayat <ariya.hidayat@trolltech.com>

Update the cursor when the frame/page loading is finished.

This fixes https://bugs.webkit.org/show_bug.cgi?id=18712


Canonical link: https://commits.webkit.org/25954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32682 268f45cc-cd09-0410-ab3c-d52691b4dbfc